DPK/QCDW32/QCWRT.H

/**************************************************************************/
/* User interface functions ***********************************************/
/**************************************************************************/

BOOL WINAPI _export WRGetAlarmLineState (PGRAPH_DEF pGrDesc, HGOBJ hObj, 
    int nAlarmType);
BOOL WINAPI _export WREnableAlarmLine (PGRAPH_DEF pGrDesc, HGOBJ hObj, 
     int nAlarmType, BOOL bOn);
BOOL WINAPI _export WRChangeAlarmMarks (PGRAPH_DEF pGrDesc, HGOBJ hObj,
    LPSTR lpAlmName, int nAlarmType, BOOL bOn);
BOOL WINAPI _export WRGetAlarmMarks (PGRAPH_DEF pGrDesc, HGOBJ hObj,
    LPSTR FAR *lpAlmName, int nAlarmType);
BOOL WINAPI _export WRGetScrollGraphParams (PGRAPH_DEF pGrDesc, HGOBJ hObj,
    LPREAL lpSampleInt, LPREAL lpResetInt, LPINT lpStep);
BOOL WINAPI _export WRChangeScrollGraph (PGRAPH_DEF pGrDesc, HGOBJ hObj,
    realtype rSampleInt, realtype rRelResetInt, int nStep);
BOOL WINAPI _export WRGetMessageParams (PGRAPH_DEF pGrDesc, HGOBJ hObj,
    LPSTR FAR *lpMessage, LPINT lpColor, int n);
BOOL WINAPI _export WRChangeMessage (PGRAPH_DEF pGrDesc, HGOBJ hObj,
    LPSTR lpMessage, int nColor, int n);
int WINAPI _export WRGetDynTextColor (PGRAPH_DEF pGrDesc, 
    HGOBJ hObj, int n);
BOOL WINAPI _export WRChangeDynTextColor (PGRAPH_DEF pGrDesc, HGOBJ hObj,
    int nColor, int n);
HGOBJ WINAPI _export WRGetAnnVal (PGRAPH_DEF pGrDesc, HGOBJ hAnn, 
    int n);
HGOBJ WINAPI _export WRGetAnnAlm (PGRAPH_DEF pGrDesc, HGOBJ hAnn, 
    int n);
HGOBJ WINAPI _export WRGetAnnUnits (PGRAPH_DEF pGrDesc, HGOBJ hAnn, 
    int n);
HGOBJ WINAPI _export WRGetAnnTitle (PGRAPH_DEF pGrDesc, HGOBJ hAnn);
HGOBJ WINAPI _export WRGetAnnTag (PGRAPH_DEF pGrDesc, HGOBJ hAnn, 
    int n);
BOOL WINAPI _export WRResumeScroll (PGRAPH_DEF pGrDesc, HGOBJ hScroll);
BOOL WINAPI _export WRMoveHistScroll (PGRAPH_DEF pGrDesc, 
    HGOBJ  hScroll, realtype rInc, LPREAL lprActualInc);
BOOL WINAPI _export WRSetScrollPos (PGRAPH_DEF pGrDesc, 
   HGOBJ hScBar, realtype rPos);
void WINAPI _export WRGetScrollPos (PGRAPH_DEF pGrDesc, HGOBJ hScBar, 
    LPREAL lprPos);
int WINAPI _export WRGetButtonState (PGRAPH_DEF pGrDesc, HGOBJ hBut);
int WINAPI _export WRChangeButtonState (PGRAPH_DEF pGrDesc, 
    HGOBJ hBut, int nSel);
void WINAPI _export WRChangeButtonColor (PGRAPH_DEF pGrDesc, 
    HGOBJ hBut, COLORREF rgbNewColor, int nSel);
COLORREF WINAPI _export WRGetButtonColor (PGRAPH_DEF pGrDesc, 
    HGOBJ hBut, int nSel);
BOOL WINAPI _export WRChangeMeterRange (PGRAPH_DEF pGrDesc, HGOBJ hMeter,
    realtype rMin, realtype rMax, realtype rCenterPoint, BOOL bUpdate);
BOOL WINAPI _export WRGetMeterRange (PGRAPH_DEF pGrDesc, HGOBJ hMeter,
    LPREAL lprMin, LPREAL lprMax, LPREAL lprCenter);
BOOL WINAPI _export WRChangeMeterTicks (PGRAPH_DEF pGrDesc, HGOBJ hMeter,
    realtype rTickRelSize, realtype rTickSpace, int nSmallTicks, 
    int nTickPos, BOOL bUpdate);
BOOL WINAPI _export WRGetMeterTicks (PGRAPH_DEF pGrDesc, HGOBJ hMeter,
    LPREAL lprTickRelSize, LPREAL lprTickSpace, 
    LPINT lpSmallTicks, LPINT lpTickPos);
BOOL WINAPI _export WRGetMeterCenter (PGRAPH_DEF pGrDesc, HGOBJ hMeter,
    LPREAL lprXCenter, LPREAL lprYCenter, LPREAL lprDiam);
BOOL WINAPI _export WRChangeMeterCenter (PGRAPH_DEF pGrDesc, HGOBJ hMeter,
    realtype rXCenter, realtype rYCenter, realtype rDiam, BOOL bUpdate);
BOOL WINAPI _export WRGetMeterAngles (PGRAPH_DEF pGrDesc, HGOBJ hMeter,
    LPINT lpStartAngle, LPINT lpEndAngle);
BOOL WINAPI _export WRChangeMeterAngles (PGRAPH_DEF pGrDesc, HGOBJ hMeter,
     int nStartAngle, int nEndAngle, BOOL bUpdate);
/**************************************************************************/
/* Miscellaneous **********************************************************/
/**************************************************************************/
void WINAPI _export WRDeleteRTGraph (PGRAPH_DEF pGrDesc);
void WINAPI _export WRDeleteRTObject (PGRAPH_DEF pGrDesc, HGOBJ hObj);
int WINAPI _export WRGetDynTypeSize (int nObjType);
void WINAPI _export InitRTDll (LPVOID lpTop);
void WINAPI WRCleanup (BOOL bFreeData);
/**************************************************************************/



// New Rev 3.0 Prototypes
// RTDATA.c
void WINAPI _export WRUpdateBinaryBlockData (HDATA hData, UINT *lpnNewValues, 
    int nSamp, PGRAPH_DEF pGrDesc);
BOOL WINAPI _export WRSetDynDataValidRange (realtype rMinNegValue,
											realtype rMaxPosValue,
											realtype rBadValue);
// RTSup.c
void WINAPI  WRProcessMouseEventAction(HWND hwnd, int nEvent, int nAction, UINT message, POINT ptMouse);
void WINAPI  WRProcessMouseEvent(HWND hwnd, UINT message, POINT ptMouse);
// Alarms.c
BOOL WINAPI _export WRCopyChAlarmsToDataSetAlarms(HDATA hData, int nChan);
BOOL WINAPI _export WRSetAlarmCh (HDATA hData, int nChan, int nAlarmType,
	realtype rAlmVal, LPSTR lpAlmMessage);
BOOL WINAPI _export WRSetSetpointCh (HDATA hData, int nChan, realtype rSetp);
void WINAPI _export WREnableAlarmCheckCh (HDATA hData, int nChan, BOOL bOn);
 
void WINAPI _export WRSetAlarmHystCh (HDATA hData, int nChan, realtype rHyst, realtype rDevHyst);
 
BOOL WINAPI _export WRGetAlarmCh (HDATA hData, int nChan, int nAlarmType, 
    LPREAL lprAlmVal, BOOL FAR *lpbOn, LPSTR FAR *lpAlmMessage);
  
BOOL WINAPI _export WRChangeAlarmCh(HDATA hData, 
	int nChan,int nAlarmType,realtype rAlmVal,BOOL bOn,	LPSTR lpAlmMessage);
BOOL WINAPI _export WRGetSetpoint (HDATA hData, LPREAL lprSetpoint);
BOOL WINAPI _export WRGetSetpointCh (HDATA hData, int nChan, LPREAL rSetp);
BOOL WINAPI _export WRGetAlarmString (HDATA hData, int nChan, 
									  int nAlarmType,  LPSTR FAR *lpAlmMessage) ;
 
BOOL WINAPI _export WRGetAlarmValue (HDATA hData, int nChan, 
									  int nAlarmType,  LPREAL lprAlmVal);
  
BOOL WINAPI _export WRGetAlarmState (HDATA hData, int nChan, 
									  int nAlarmType,  LPBOOL lpbOn);
  

// RText.c
HGOBJ WINAPI _export WRSetAnnun3 (PGRAPH_DEF pGrDesc,
	HDATA  hData, int nValWidth, int    nPrec, 
    int   nFontSize, LPINT lpChanColors, COLORREF FAR *lpRgbBackColors,
	COLORREF rgbLowAlmColor, COLORREF rgbHighAlmColor,
	int     nNumRows, int nNumColumns, BOOL FAR *lpFlags, int n3D);
// RTXY.x
HGOBJ WINAPI _export WRSetXYScatterGraph (PGRAPH_DEF pGrDesc, HDATA hData,
	int   nNumPoints, 
    LPINT lpMarkerShape, LPINT lpMarkerColor, LPINT lpMarkerSize,
	LPINT lpMarkerLineWidth,
    LPINT lpMarkerStyle);
// SCROLL.C
HGOBJ WINAPI _export WRSetScrollScatterGraph (PGRAPH_DEF pGrDesc, 
	HDATA hData, realtype rSampleInt, realtype rRelResetInt,
	int nDir, LPINT lpMarkerShape,  LPINT lpMarkerColor,  
	LPINT lpMarkerSize, LPINT lpMarkerLineWidth, LPINT lpMarkerStyle);
 
void  WINAPI _export WRSetScrollChannelAlarmColors(PGRAPH_DEF pGrDesc, 
						  HGOBJ	hScroll,
						  HGOBJ hAlrmLine);
HGOBJ WINAPI _export WRSetScrollMultiBarGraph (PGRAPH_DEF pGrDesc, 
	HDATA hData, realtype rSampleInt, realtype rRelResetInt,
	int nDir, COLORREF *lpLineColor, realtype rBarWidth,realtype rBarBase,
	realtype rBarOffset);
HGOBJ WINAPI _export WRSetScrollComboGraph (PGRAPH_DEF pGrDesc, 
	HDATA hData, realtype rSampleInt, realtype rRelResetInt,
	int nDir, LPINT lpMarkerShape,	LPINT lpMarkerColor, 
	LPINT lpMarkerSize, LPINT lpMarkerLineWidth,
	LPINT lpMarkerStyle, realtype rBarWidth,
	realtype rBarBase,realtype rBarOffset);
void  WINAPI _export WRSetDynBitBltMode(PGRAPH_DEF pGrDesc, 
						  HGOBJ	hScroll, BOOL bBitBltMode);
BOOL  WINAPI _export WRGetDynBitBltMode(PGRAPH_DEF pGrDesc, 
						  HGOBJ	hScroll);
HGOBJ  WINAPI _export WRGetScrollChannelAlarmColors(PGRAPH_DEF pGrDesc, 
						  HGOBJ	hScroll);
// sweep.c
HGOBJ WINAPI _export WRSetSweepScatterGraph (PGRAPH_DEF pGrDesc, 
    HDATA hData,
	realtype rSampleInt, int nDir,    
    int nSweepLineColor, 
	LPINT lpMarkerShape,  
	LPINT lpMarkerColor, 
	LPINT lpMarkerSize,   
	LPINT lpMarkerLineWidth,
	LPINT lpMarkerStyle);
HGOBJ WINAPI _export WRSetSweepComboGraph (PGRAPH_DEF pGrDesc, 
    HDATA hData, realtype rSampleInt, int nDir,    
    int nSweepLineColor, LPINT lpMarkerShape, 
	LPINT lpMarkerColor, LPINT lpMarkerSize,   
	LPINT lpMarkerLineWidth, LPINT lpMarkerStyle,
	realtype rBarWidth,	realtype rBarBase,
	realtype rBarOffset) ;
//scrvar.c
HGOBJ WINAPI _export WRSetVarScatterScroll (PGRAPH_DEF pGrDesc,
    HDATA hData, realtype rRelResetInt, int nDir,    
	LPINT lpMarkerShape,  // linestyle
	LPINT lpMarkerColor,  // line color
	LPINT lpMarkerSize,   
	LPINT lpMarkerLineWidth,
	LPINT lpMarkerStyle);
HGOBJ WINAPI _export WRSetVarComboScroll (PGRAPH_DEF pGrDesc,
    HDATA hData, realtype rRelResetInt, int nDir,    
    int nStep, 	LPINT lpMarkerShape,LPINT lpMarkerColor,  
	LPINT lpMarkerSize,  LPINT lpMarkerLineWidth,
	LPINT lpMarkerStyle, realtype rBarWidth,
	realtype rBarBase,	realtype rBarOffset);
// rtbar.c
HGOBJ WINAPI _export WRSetDynLineGraph (PGRAPH_DEF pGrDesc,
    HDATA    hData, 
    int      nDir, 
	int      nStep,
	realtype rFirst, 
    realtype rLast, realtype rWidth,  
	int      nLineStyle, int   nLineWidth, 
	int      nLineColor);
// rtgui.c
int WINAPI _export WRGetSelectedChannel (PGRAPH_DEF pGrDesc);
		
HDATA WINAPI _export WRGetDynDataSet (PGRAPH_DEF pGrDesc, HGOBJ hObj);