DPK/QCDW32/qcwrt.pas


function WRGetAlarmLineState (pGrDesc:PGRAPH_DEF; thgobj:HGOBJ;
    nAlarmType:INTEGER): BOOL; stdcall;
function WREnableAlarmLine (pGrDesc:PGRAPH_DEF; thgobj:HGOBJ;
     nAlarmType:INTEGER; bOn:BOOL): BOOL; stdcall;
function WRChangeAlarmMarks (pGrDesc:PGRAPH_DEF; thgobj:HGOBJ;
    lpAlmName:LPSTR; nAlarmType:INTEGER;
     bOn:BOOL): BOOL; stdcall;
function WRGetAlarmMarks (pGrDesc:PGRAPH_DEF; thgobj:HGOBJ;
    var lpAlmName:LPSTR; nAlarmType:INTEGER): BOOL; stdcall;
function WRGetScrollGraphParams (pGrDesc:PGRAPH_DEF; thgobj:HGOBJ;
    var  lpSampleInt,
    lpResetInt, lpStep:Realtype): BOOL; stdcall;
function WRChangeScrollGraph (pGrDesc:PGRAPH_DEF; thgobj:HGOBJ;
    rSampleInt, rRelResetInt:Realtype; nStep:INTEGER): BOOL; stdcall;
function WRGetMessageParams (pGrDesc:PGRAPH_DEF; thgobj:HGOBJ;
    var lpMessage:LPSTR; var lpColor:INTEGER; n:INTEGER): BOOL; stdcall;
function WRChangeMessage (pGrDesc:PGRAPH_DEF; thgobj:HGOBJ;
    lpMessageL:LPSTR; nColor, n:INTEGER): BOOL; stdcall;
function  WRGetDynTextColor (pGrDesc:PGRAPH_DEF;
    thgobj:HGOBJ; n:INTEGER): INTEGER; stdcall;
function WRChangeDynTextColor (pGrDesc:PGRAPH_DEF; thgobj:HGOBJ;
    nColor, n:INTEGER): BOOL; stdcall;
function WRGetAnnVal (pGrDesc:PGRAPH_DEF; hAnn:HGOBJ; n:INTEGER): HGOBJ; stdcall;
function WRGetAnnAlm (pGrDesc:PGRAPH_DEF; hAnn:HGOBJ; n:INTEGER): HGOBJ; stdcall;
function WRGetAnnUnits (pGrDesc:PGRAPH_DEF; hAnn:HGOBJ; n:INTEGER): HGOBJ; stdcall;
function WRGetAnnTitle (pGrDesc:PGRAPH_DEF; hAnn:HGOBJ): HGOBJ; stdcall;
function WRGetAnnTag (pGrDesc:PGRAPH_DEF; hAnn:HGOBJ; n:INTEGER): HGOBJ; stdcall;
function WRResumeScroll (pGrDesc:PGRAPH_DEF; hScroll:HGOBJ): BOOL; stdcall;
function WRMoveHistScroll (pGrDesc:PGRAPH_DEF;
    hScroll:HGOBJ; rInc:Realtype; var lprActualInc:RealType): BOOL; stdcall;
function WRSetScrollPos (pGrDesc:PGRAPH_DEF;
    hScBar:HGOBJ; rPos:Realtype): BOOL; stdcall;
procedure WRGetScrollPos (pGrDesc:PGRAPH_DEF; hScBar:HGOBJ; var lprPos:Realtype);
function WRGetButtonState (pGrDesc:PGRAPH_DEF; hBut:HGOBJ): INTEGER; stdcall;
function WRChangeButtonState (pGrDesc:PGRAPH_DEF; hBut:HGOBJ;
         nSel:INTEGER): INTEGER; stdcall;
procedure WRChangeButtonColor (pGrDesc:PGRAPH_DEF; hBut:HGOBJ; rgbNewColor:TCOLORREF;
        nSel:INTEGER); stdcall;
function WRGetButtonColor (pGrDesc:PGRAPH_DEF; hBut:HGOBJ; nSel:INTEGER): TCOLORREF; stdcall;
function WRChangeMeterRange (pGrDesc:PGRAPH_DEF; hMeter:HGOBJ;
     rMin, rMax, rCenterPoint:Realtype; bUpdate:BOOL): BOOL; stdcall;
function WRGetMeterRange (pGrDesc:PGRAPH_DEF; hMeter:HGOBJ;
    var lprMin, lprMax, lprCenter:Realtype): BOOL; stdcall;
function WRChangeMeterTicks (pGrDesc:PGRAPH_DEF; hMeter:HGOBJ;
     rTickRelSize, rTickSpace:Realtype;
     nSmallTicks, nTickPos:INTEGER;
     bUpdate:BOOL): BOOL; stdcall;
function WRGetMeterTicks (pGrDesc:PGRAPH_DEF; hMeter:HGOBJ;
    var lprTickRelSize, lprTickSpace:Realtype; var lpSmallTicks, lpTickPos:INTEGER): BOOL; stdcall;
function WRGetMeterCenter (pGrDesc:PGRAPH_DEF; hMeter:HGOBJ;
     var lprXCenter, lprYCenter, lprDiam:Realtype): BOOL; stdcall;
function WRChangeMeterCenter (pGrDesc:PGRAPH_DEF; hMeter:HGOBJ;
     rXCenter, rYCenter, rDiam:Realtype;
     bUpdate:BOOL): BOOL; stdcall;
function WRGetMeterAngles (pGrDesc:PGRAPH_DEF; hMeter:HGOBJ;
    var lpStartAngle, lpEndAngle:INTEGER): BOOL; stdcall;
function WRChangeMeterAngles (pGrDesc:PGRAPH_DEF; hMeter:HGOBJ;
      nStartAngle, nEndAngle:INTEGER;
      bUpdate:BOOL): BOOL; stdcall;

{************************************************************************}
{ Miscellaneous *********************************************************}
{************************************************************************}
procedure WRDeleteRTGraph (pGrDesc:PGRAPH_DEF); stdcall;
procedure WRDeleteRTObject (pGrDesc:PGRAPH_DEF; thgobj:HGOBJ); stdcall;

function WRGetDynTypeSize (nObjType:INTEGER): INTEGER; stdcall;
procedure InitRTDll (lpTop:POINTER); stdcall;

procedure WRCleanup (bFreeData:BOOL); stdcall;
{************************************************************************}


// New Rev 3.0 Prototypes
// RTDATA.c
procedure  WRUpdateBinaryBlockData (hData: HDATA; lpnNewValues: PUINT;
     nSamp: INTEGER;  pGrDesc: PGRAPH_DEF); stdcall;
 function WRSetDynDataValidRange ( rMinNegValue, rMaxPosValue, rBadValue: Realtype):BOOL; stdcall;

// RTSup.c
//void WINAPI  WRProcessMouseEventAction(HWND hwnd, int nEvent, int nAction, UINT message, POINT ptMouse):
//void WINAPI  WRProcessMouseEvent(HWND hwnd, UINT message, POINT ptMouse):


// Alarms.c
 function WRCopyChAlarmsToDataSetAlarms(hData: HDATA; nChan: INTEGER):BOOL; stdcall;
 function WRSetAlarmCh (hData: HDATA;  nChan,  nAlarmType: INTEGER;
	 rAlmVal: Realtype; lpAlmMessage: PChar): BOOL; stdcall;
function WRSetSetpointCh (hData: HDATA; nChan: INTEGER;  rSetp: Realtype):BOOL; stdcall;
procedure WREnableAlarmCheckCh (hData: HDATA;  nChan: INTEGER;  bOn: BOOL); stdcall;
procedure WRSetAlarmHystCh (hData: HDATA;  nChan: INTEGER;  rHyst, rDevHyst: Realtype); stdcall;
function WRGetAlarmCh (hData: HDATA; nChan,  nAlarmType: INTEGER;
    VAR  lprAlmVal: Realtype; VAR lpbOn: BOOL;  lpAlmMessage: PChar):BOOL; stdcall;
 function WRChangeAlarmCh(hData: HDATA;
	 nChan, nAlarmType: INTEGER;  rAlmVal: Realtype;  bOn: BOOL;
         lpAlmMessage: PChar): BOOL; stdcall;
 function WRGetSetpoint (hData: HDATA; VAR lprSetpoint: Realtype): BOOL; stdcall;
 function WRGetSetpointCh (hData: HDATA;  nChan: INTEGER; VAR  rSetp: Realtype): BOOL; stdcall;
 function WRGetAlarmString (hData: HDATA;  nChan,
	   nAlarmType: INTEGER;  lpAlmMessage: PChar): BOOL; stdcall;
 function WRGetAlarmValue (hData: HDATA;  nChan, nAlarmType: INTEGER;
           VAR lprAlmVal: Realtype): BOOL; stdcall;
 function WRGetAlarmState (hData: HDATA;  nChan, nAlarmType: INTEGER;
              VAR lpbOn: BOOL):BOOL; stdcall;

// RText.c
 function WRSetAnnun3 (pGrDesc: PGRAPH_DEF;
	  hData: HDATA;  nValWidth, nPrec, nFontSize: INTEGER;
           lpChanColors: LPINT; lpRgbBackColors: COLORREF;
	   rgbLowAlmColor: COLORREF;  rgbHighAlmColor: COLORREF;
	    nNumRows,  nNumColumns: INTEGER;
             lpFlags: LPBOOL;  n3D: INTEGER): HGOBJ; stdcall;

// RTXY.x
 function WRSetXYScatterGraph (pGrDesc: PGRAPH_DEF; hData: HDATA;
	   nNumPoints: INTEGER;
     lpMarkerShape,  lpMarkerColor,  lpMarkerSize,
	 lpMarkerLineWidth, lpMarkerStyle: LPINT): HGOBJ; stdcall;

// SCROLL.C
 function WRSetScrollScatterGraph (pGrDesc: PGRAPH_DEF;
	hData: HDATA;  rSampleInt,  rRelResetInt: realtype;
	 nDir: INTEGER;  lpMarkerShape,   lpMarkerColor,
	 lpMarkerSize,  lpMarkerLineWidth,  lpMarkerStyle: LPINT): HGOBJ; stdcall;
procedure  WRSetScrollChannelAlarmColors(pGrDesc: PGRAPH_DEF;
			  hScroll,   hAlrmLine: HGOBJ); stdcall;
 function WRSetScrollMultiBarGraph (pGrDesc: PGRAPH_DEF;
	hData: HDATA;  rSampleInt,  rRelResetInt: realtype;
	 nDir: INTEGER;  lpLineColor: LPTCOLORREF;  rBarWidth, rBarBase,
	 rBarOffset: Realtype): HGOBJ; stdcall;
 function WRSetScrollComboGraph (pGrDesc: PGRAPH_DEF;
	hData: HDATA;  rSampleInt,  rRelResetInt: realtype;
	 nDir: INTEGER;  lpMarkerShape,	 lpMarkerColor,
	 lpMarkerSize,  lpMarkerLineWidth,
	 lpMarkerStyle: LPINT;  rBarWidth,
	 rBarBase, rBarOffset: realtype):  HGOBJ; stdcall;
procedure WRSetDynBitBltMode(pGrDesc: PGRAPH_DEF;
		       	  	hScroll: HGOBJ;  bBitBltMode: BOOL); stdcall;
  function WRGetDynBitBltMode(pGrDesc: PGRAPH_DEF;
       		  	hScroll: HGOBJ):BOOL; stdcall;
  function WRGetScrollChannelAlarmColors(pGrDesc: PGRAPH_DEF;
       		  	hScroll: HGOBJ): HGOBJ; stdcall;

// sweep.c
 function WRSetSweepScatterGraph (pGrDesc: PGRAPH_DEF;
    hData: HDATA;
     rSampleInt: Realtype;  nDir,
     nSweepLineColor:INTEGER;
	 lpMarkerShape,
	 lpMarkerColor,
	 lpMarkerSize,
	 lpMarkerLineWidth,
	 lpMarkerStyle: LPINT): HGOBJ; stdcall;
 function WRSetSweepComboGraph (pGrDesc: PGRAPH_DEF;
    hData: HDATA;  rSampleInt: realtype;  nDir,
     nSweepLineColor: INTEGER;  lpMarkerShape,
	 lpMarkerColor,  lpMarkerSize,
	 lpMarkerLineWidth,  lpMarkerStyle: LPINT;
	 rBarWidth,  rBarBase,
	 rBarOffset: realtype): HGOBJ; stdcall;

//scrvar.c
 function WRSetVarScatterScroll (pGrDesc: PGRAPH_DEF;
    hData: HDATA;  rRelResetInt: realtype;  nDir: INTEGER;
	 lpMarkerShape,  // linestyle
	 lpMarkerColor,  // line color
	 lpMarkerSize,
	 lpMarkerLineWidth,
	 lpMarkerStyle: LPINT): HGOBJ; stdcall;
 function WRSetVarComboScroll (pGrDesc: PGRAPH_DEF;
    hData: HDATA;  rRelResetInt: realtype;  nDir,
     nStep: INTEGER; 	 lpMarkerShape, lpMarkerColor,
	 lpMarkerSize,   lpMarkerLineWidth,
	 lpMarkerStyle: LPINT;  rBarWidth,
	 rBarBase,  rBarOffset: Realtype):HGOBJ; stdcall;

// rtbar.c
 function WRSetDynLineGraph (pGrDesc: PGRAPH_DEF;
        hData: HDATA;
        nDir, nStep: INTEGER;
	rFirst, rLast,  rWidth: realtype;
        nLineStyle,    nLineWidth,
        nLineColor: INTEGER): HGOBJ; stdcall;

// rtgui.c
 function WRGetSelectedChannel (pGrDesc: PGRAPH_DEF ): INTEGER; stdcall;
 function WRGetDynDataSet (pGrDesc: PGRAPH_DEF; hObj: HGOBJ ):HDATA; stdcall;

